src/style.scss
#z-calender {
  height: 100%;

  table, td, th {
    border-collapse: collapse;
    padding: 0;
  }

  table {
    width: 100%;
    height: 100%;
    table-layout: fixed;
    border-spacing: 0;
  }

  td {
    vertical-align: top;
  }

  .z-container {
    height: 100%;
    height: calc(100% - 46px);
  }

  .z-weeks {
    height: 100%;
    height: calc(100% - 36px);
  }

  .z-week {
    height: 16.667%;
    position: relative;
  }

  .z-week-skeleton {
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;

    td {
      border-style: solid;
      border-width: 1px;
      border-color: #ddd;
      padding: 0;
    }

    .z-active {
      background: #f6f2fb;
    }
  }

  .z-title {
    font-size: 20px;
    margin-right: 10px;
  }

  .z-header {
    font-weight: bold;
    margin: 0 0 20px 0;
  }

  .z-actions {
    float: right;

    a {
      display: inline-block;
      text-decoration: none;
      padding: 5px 10px;

      &:hover {
        background: #f7f7f7;
        border-radius: 3px;
      }
    }
  }

  .z-overlay {
    height: 100%;
    position: relative;
    height: auto;
    pointer-events: none;

    thead {
      th {
        text-align: right;
        padding: 8px 10px;
        font-weight: normal;

        &.z-active {
          color: rebeccapurple;
          font-weight: bold;
          font-size: 18px;
        }
      }
    }
  }

  .z-day-names {
    th {
      text-align: center;
      padding: 8px 0;
    }
  }

  .z-day-trailing {
    color: #ccc;
  }

  .z-event {
    margin: 2px;
    background: rebeccapurple;
    color: #fff;
    padding: 2px 5px;
    font-size: 13px;
    -webkit-line-clamp: 1;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    pointer-events: auto;
  }

  .z-event-hover {
    .z-event {
      background: #8c53c6;
    }
  }

  .z-event-continues-before-after {
    border-radius: 1em;
  }

  .z-event-continues-after {
    border-top-right-radius: 1em;
    border-bottom-right-radius: 1em;
  }

  .z-event-continues-before {
    border-top-left-radius: 1em;
    border-bottom-left-radius: 1em;
  }
}

